--- a/templates/sass/_media.sass
+++ b/templates/sass/_media.sass
@@ -148,6 +148,7 @@
       left: 0
       bottom: 0
       padding-top: 30px
+      overflow: auto
       &--visible
         display: block
     &-list
